# Gestalt

./: CMakeLists.txt  Gestalt.cpp  Gestalt.h  README.md  vcpkg.json
Examples/: CMakeLists.txt
Examples/MiniBrowser/: CMakeLists.txt  MIniBrowser.cpp
Source/: CMakeLists.txt  Feature.h  Feature.hpp  Gestalt.cpp  Gestalt.hpp  HTMLTidy.cpp  HTMLTidy.hpp  Platform.h  Platform.hpp  XML.cpp  XML.hpp
